Fix view on small screens

--- a/front_end/src/app/hand/hand.component.css
+++ b/front_end/src/app/hand/hand.component.css
@@ -4,7 +4,9 @@
 .smearcard {
     margin: 3px;
     height: 250px;
-    width: 150px;
+    max-height: 250px;
+    width: 100%;
+    max-width: 150px;
     background-color: #EEEEEE;
     border: 2px solid #000000;
 }
